--- a/app/globals.css
+++ b/app/globals.css
@@ -21,6 +21,7 @@ body {
   height: 100vh;
   display: flex;
   flex-direction: column;
+  background-color: rgb(243, 244, 246);
 }
 
 @layer utilities {
